Arrays.asList replaced with List.of.